fix new design spacing

--- a/www/static/css/style.css
+++ b/www/static/css/style.css
@@ -45,6 +45,10 @@ pre {
  	font-family: 'Inconsolata', monospace;
 }
 
+li {
+	padding: 0.1em 0;
+}
+
 #wrapper {
 	display: flex;
 	flex-grow: 1;
@@ -60,13 +64,9 @@ pre {
 }
 
 #sidebar ul {
-	margin: 0;
+	margin: -0.1rem 0;
 	padding-left: 0.5rem;
 	list-style: none;
-}
-
-li {
-	padding: 0.1em 0;
 }
 
 #sidebar h2:first-of-type {
